<resources>
    <string name="app_name">Kredi Hesaplama</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">Faiz oranı girerek hesaplama</string>
    <string name="data">Bankalara göre hesaplama</string>
    <string name="consumer">İhtiyaç</string>
    <string name="dwelling">Konut</string>
    <string name="vehicle">Taşıt</string>
    <string name="amount_of_loan">Kredi Tutarı</string>
    <string name="maturity">Vade(ay)</string>
    <string name="bank_rate">Faiz Oranı(%)</string>
    <string name="calculate">Taksit Hesapla</string>
    <string name="bank">Banka Seçiniz</string>
    <string-array name="bankName">
        <item>Yapı Kredi</item>
        <item>İş Bankası</item>
        <item>Halk Bank</item>
        <item>Akbank</item>
        <item>Garanti Bankası</item>
    </string-array>
    <string name="title_activity_no_data_calculate">NoDataCalculate</string>
    <string name="title_activity_data_calculate">DataCalculate</string>

</resources>
